[gd_scene load_steps=9 format=2]

[ext_resource path="res://common/beam/Beam.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/beams/sprites/dark_beam.png" type="Texture" id=2]
[ext_resource path="res://player/beams/DarkBeam.gd" type="Script" id=3]
[ext_resource path="res://player/beams/sounds/placeholder.wav" type="AudioStream" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.0

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0533673 ), -2.77918, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, 1, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 140.0
initial_velocity_random = 0.4
angular_velocity = 47.81
angular_velocity_random = 0.3
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 19.8
damping_random = 0.5
scale = 2.9
scale_curve = SubResource( 4 )

[node name="DarkBeam" instance=ExtResource( 1 )]
collision_layer = 8
collision_mask = 2
script = ExtResource( 3 )
movement_speed = 900.0

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
modulate = Color( 0.580392, 0.290196, 2, 1 )
scale = Vector2( 1.8, 1.8 )
texture = ExtResource( 2 )

[node name="ShootSound" parent="." index="4"]
stream = ExtResource( 4 )
volume_db = -14.845

[node name="Sprite2" type="Sprite" parent="." index="5"]
modulate = Color( 2.5, 2.5, 2.5, 1 )
position = Vector2( 0, -1 )
scale = Vector2( 1.372, 1.538 )
texture = ExtResource( 2 )

[node name="Sprite3" type="Sprite" parent="." index="6"]
modulate = Color( 3, 3, 3, 1 )
position = Vector2( 0, -3 )
scale = Vector2( 1.285, 1.139 )
texture = ExtResource( 2 )

[node name="CollisionParticle" type="Particles2D" parent="." index="7"]
self_modulate = Color( 2.37, 0.51, 2.98, 1 )
emitting = false
amount = 4
lifetime = 0.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 2 )

[connection signal="area_entered" from="." to="." method="_on_DarkBeam_area_entered"]
